--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="description" content="Dutch Digital Agencies Website">
 		<link rel="stylesheet" href="/global.css">
+		<title>Website Dutch Digital Agencie</title>
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
