--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="description" content="Dutch Digital Agencies Website">
 		<title>Dutch Digital Agencies</title>
-		<link rel="stylesheet" href="/global.css">
+		<link rel="stylesheet" href="/stylesheet/global.css">
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
