--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,8 @@
 		<meta name="description" content="Dutch Digital Agencies Website">
 		<title>Dutch Digital Agencies</title>
 		<link rel="stylesheet" href="/global.css">
+		<link rel="preload" href="/static/font/Archivo-VariableFont_wdth,wght.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
